I added QueryDispatcher and enriched logging with Serilog
