# Samples/Sample.Web.API/Web.API.Services/WeatherForecast.cs
@@ -1,18 +1,0 @@
-using System;
-
-namespace Sample.API
-{
-    public class WeatherForecast
-    {
-        /// <summary>
-        /// Date of forecast
-        /// </summary>
-        public DateTime Date { get; set; }
-
-        public int TemperatureC { get; set; }
-
-        public int TemperatureF => 32 + (int)(TemperatureC / 0.5556);
-
-        public string Summary { get; set; }
-    }
-}
